# SynAgent

./: .env.sample  CHANGES_EXPLAINED.md  README.md  pyproject.toml
.claude/skills/add-capability/: SKILL.md
.claude/skills/run-synagent/: SKILL.md  smoke.sh
.github/workflows/: lint.yml
data/: 91_rxn_templates.sma  create_fp_dbs.py  output.jsonl  synllama-raw-valid.csv  synllama-validate.py
src/synagent/: __init__.py  __main__.py  chemspace.py  chemspacetool.py  enaminetool.py  interface.py  llm_tools.py  models.py  synagent.py  tokenmanager.py  validate.py  workflows.py
src/synagent/_legacy/: optimization.py
src/synagent/agents/: __init__.py  chemspace.py  corrector.py  example.py  master.py  optimization.py  validation.py
src/synagent/analogues/: __init__.py  _capability.py  _models.py  _toolset.py
src/synagent/analogues/data/: reactions.h5
src/synagent/chemspace/: README.md  __init__.py  _capability.py  _models.py  _toolset.py  chemspace.py
src/synagent/scoring/: __init__.py  _capability.py  _toolset.py  hazard.py
src/synagent/storage/: __init__.py  _capability.py  _models.py  _toolset.py
src/synagent/validation/: README.md  __init__.py  _capability.py  _models.py  _toolset.py
tests/: conftest.py  test_enaminetool.py  test_llm_tools.py  test_master.py  test_workflows.py
