[project]
name = "synagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lukasmki", email = "lukasarus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.38.1",
    "pydantic-ai>=1.63.0",
    "python-dotenv>=1.2.1",
    "rdkit>=2025.9.5",
]

[project.scripts]
synagent = "synagent.__main__:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
