[project]
name = "synagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lukasmki", email = "lukasarus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "epam-indigo>=1.43.0",
    "httpx>=0.28.1",
    "polars>=1.38.1",
    "pydantic-ai>=1.63.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rdchiral>=1.1.0",
    "rdkit>=2025.9.5",
    "ruff>=0.15.6",
]

[project.scripts]
synagent = "synagent.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py313"  # adjust to your Python version

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter if you use ruff format)
    "B008",  # do not perform function calls in default arguments (common in FastAPI)
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
