[project]
name = "synagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lukasmki", email = "lukasarus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fpsim2",
    "polars>=1.38.1",
    "pydantic-ai>=1.63.0",
    "pydantic-ai-harness[codemode]>=0.4.0",
    "python-dotenv>=1.2.1",
    "rdkit>=2025.9.5",
    "rich>=15.0.0",
    "ruff>=0.15.6",
    "tqdm>=4.68.3",
    "typer>=0.26.7",
    "uvicorn>=0.49.0",
]

[project.scripts]
synagent = "synagent.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py313"  # adjust to your Python version

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter if you use ruff format)
    "B008",  # do not perform function calls in default arguments (common in FastAPI)
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.package-data]
synagent = [
    "analogues/data/*"
]

[tool.uv.sources]
fpsim2 = { git = "https://github.com/lukasmki/FPSim2.git" }
